# embedded_systems

./: .gitignore  CLAUDE.md  LICENSE
docs/: README.md  commands.md  gotchas.md  initial_plan.md  progress.md
docs/concepts/: README.md  captive-portal.md  one-wire-protocol.md  service-modules.md
docs/hardware/: components.md  pinout.md
docs/hardware/datasheets/: README.md  dfrobot-ds18b20-wiki.html
docs/steps/: 01-hello-world.md  02-blink-led.md  03-ds18b20-kit.md  05-wifi-captive-portal.md
temp_monitor/: Cargo.toml  sdkconfig.defaults
temp_monitor/.cargo/: config.toml
temp_monitor/src/: api.rs  main.rs  sensor.rs  wifi.rs
temp_monitor/src/wifi/: ap.rs  credentials.rs  dns.rs  http.rs  mod.rs  sta.rs
