[package]
name = "temp_monitor"
version = "0.1.0"
authors = ["wihanuys <wihan@glydepay.io>"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "temp_monitor"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"
[patch.crates-io]
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys.git" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git" }

[dependencies]
log = "0.4"
anyhow = "1"
esp-idf-svc = { version = "0.52.1", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
# Remove `generic-queue-8` if you plan to use `embassy-time` WITH `embassy-executor`
embassy-time = { version = "0.5", features = ["generic-queue-8"] }
# 1-Wire + DS18B20 drivers (embedded-hal 0.2 API; esp-idf-hal provides the 0.2 compat).
one-wire-bus = "0.1"
ds18b20 = "0.1"
# Needed directly because we reference the 0.2 `InputPin`/`OutputPin` traits in
# trait bounds of our helper fn. Transitive deps aren't visible to `use`.
embedded-hal = "0.2"

[build-dependencies]
embuild = "0.33"
